# aiai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: evolution.yaml  models.yaml  safety.yaml
docs/: architecture.md  concepts.md  vision.md
docs/founding/: evolution-engine.md  manifesto.md  model-routing.md  principles.md  roadmap.md  safety-model.md  theory-of-operation.md
docs/research/: agent-memory-systems.md  agent-orchestration-patterns.md  agent-safety-and-alignment.md  agentic-devops.md  ai-building-ai.md  ai-infrastructure-landscape-2026.md  autonomous-safety-engineering.md  autonomous-software-development.md  evaluation-and-benchmarks.md  fully-autonomous-systems.md  hetzner-deployment-guide.md  metrics-and-evolution-design.md  model-routing-and-cost.md  monorepo-and-service-architecture.md  multi-agent-coordination.md  openclaw-and-agent-frameworks.md  openrouter-client-design.md  python-agent-ecosystem.md  self-improvement-technical.md  self-improving-ai.md
scripts/: agent-git.sh  git-workflow.sh
tests/core/: test_config.py  test_logging.py  test_types.py
tests/evolution/: __init__.py  test_analyzer.py  test_executor.py  test_hypothesis.py  test_patterns.py
tests/metrics/: __init__.py  test_aggregator.py  test_api.py  test_collector.py  test_store.py
tests/router/: conftest.py  test_client.py  test_cost.py  test_fallback.py  test_selector.py
tests/safety/: test_circuit_breaker.py  test_invariants.py  test_loop_detector.py  test_protected_files.py
